# food-recipe-ideator

./: .env.example  .gitignore  PLAN.md  README.md  TASKS.md  docker-compose.prod.yml  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  main.py  pyproject.toml
backend/src/: config.py
backend/src/api/: main.py  routes.py
backend/src/data_ingestion/: csv_parser.py  kg_loader.py  pg_loader.py  run.py
backend/src/query_engine/: fusion.py  intent_parser.py  kg_query.py  pg_query.py
backend/src/services/: controlled_vocab.py  recipe_preview.py
backend/tests/: conftest.py  test_api.py  test_controlled_vocab.py  test_csv_parser.py  test_intent_parser.py  test_kg_query.py  test_pg_query.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: QueryBreakdown.tsx  RecipeAssistant.tsx  RecipeCard.tsx  SearchBar.tsx  ThinkingPanel.tsx  index.ts
frontend/src/services/: api.ts
frontend/src/types/: index.ts
ops/: deploy.sh
ops/pgadmin/: servers.json
recipes-data/: .gitattributes  controlled_vocab.json
